SPORT-153: add team-stats API
