# app-service/RSC/responses.go
@@ -6,10 +6,16 @@ type ScheduleData struct {
 type TeamInfoData struct {
 	NBA []TeamInfoItem `json:"NBA"`
 }
+type TeamSeasonStatData struct {
+	NBA []TeamSeasonStatItem `json:"NBA"`
+}
 
 type Schedule struct {
 	Data ScheduleData `json:"data"`
 }
 type TeamInfo struct {
 	Data TeamInfoData `json:"data"`
+}
+type TeamSeasonStats struct {
+	Data TeamSeasonStatData `json:"data"`
 }
