# app-service/controller/setup.go
@@ -32,4 +32,5 @@ func Setup(g *gin.RouterGroup, options ...c.Option) {
 	protected.GET("/schedule-season", ScheduleSeason)
 	protected.GET("/daily-schedule", DailySchedule)
 	protected.GET("/team-info", TeamInfo)
+	protected.GET("/team-stats", TeamStats)
 }
